--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="./images/googlelogo_color_272x92dp.png" alt="Google Logo">
         </div>
         <div class="search-bar">
-            <form action="https://www.google.com/" method="GET">
+            <form action="https://www.google.com/search" method="GET">
                 <div class="text-box">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
