--- a/index.html
+++ b/index.html
@@ -36,20 +36,21 @@
                 <input class="search lucky " type="submit" value="I'm Feeling Lucky ">
             </form>
         </div>
-        <div class="footer-left">
-            <ul>
-                <li><a href="#">Advertising</a></li>
-                <li><a href="#">Business</a></li>
-                <li><a href=" # ">How Search Works</a></li>
-            </ul>
-        </div>
-        <div class="footer-right ">
-            <ul>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Settings</a></li>
-            </ul>
-        </div>
+            <div class="footer-left">
+                <ul>
+                    <li><a href="#">Advertising</a></li>
+                    <li><a href="#">Business</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href=" # ">How Search Works</a></li>
+                </ul>
+            </div>
+            <div class="footer-right ">
+                <ul>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Settings</a></li>
+                </ul>
+            </div>
     </div>
 </body>
 
